workgin find empty dirs